--- a/index.html
+++ b/index.html
@@ -165,9 +165,32 @@
         }
 
         #success-message p {
-            margin: 0;
+            margin: 0 0 15px 0;
             color: #7f8c8d;
             font-size: 0.95rem;
+        }
+
+        .btn-form {
+            display: inline-block;
+            padding: 12px 30px;
+            background-color: #dfa668;
+            color: white;
+            text-decoration: none;
+            border-radius: 25px;
+            font-weight: 600;
+            font-size: 0.95rem;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 10px rgba(223, 166, 104, 0.3);
+        }
+
+        .btn-form:hover {
+            background-color: #c98f52;
+            transform: translateY(-2px);
+            box-shadow: 0 6px 15px rgba(223, 166, 104, 0.4);
+        }
+
+        .btn-form:active {
+            transform: translateY(0);
         }
 
         .puzzle-complete #final-reveal { opacity: 1; }
@@ -193,6 +216,7 @@
     <div id="success-message">
         <h2>Félicitations !</h2>
         <p>Vous avez maintenant la date du mariage ! Hâte de vous y voir 🥰</p>
+        <a href="https://forms.gle/VOTRE_FORMULAIRE" target="_blank" class="btn-form">Confirmer ma présence</a>
     </div>
 
     <script>
