--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
     <div id="success-message">
         <h2>Félicitations !</h2>
-        <p>Vous avez maintenant la date du mariage ! Hâte de vous y voir 🥰</p>
+        <p>Vous avez maintenant la date et le lieu du mariage 🥰</p>
         <a href="https://forms.gle/VOTRE_FORMULAIRE" target="_blank" class="btn-form">Confirmer ma présence</a>
     </div>
 
