--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <div id="success-message">
         <h2>Félicitations !</h2>
         <p>Vous avez maintenant la date et le lieu du mariage 🥰</p>
-        <a href="https://forms.gle/VOTRE_FORMULAIRE" target="_blank" class="btn-form">Confirmer ma présence</a>
+        <a href="https://forms.gle/VOTRE_FORMULAIRE" target="_blank" class="btn-form">Continuer</a>
     </div>
 
     <script>
