--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
 
     <div id="success-message">
         <h2>Félicitations !</h2>
-        <p>Vous avez maintenant la date du mariage ! Hâte de vous y voir 🥰</p>
-        <a href="https://forms.gle/VOTRE_FORMULAIRE" target="_blank" class="btn-form">Confirmer ma présence</a>
+        <p>Le mariage aura lieu au Tir au Vol, à Arcachon ⚓️</p>
+        <a href="https://forms.gle/VOTRE_FORMULAIRE" target="_blank" class="btn-form">Continuer</a>
     </div>
 
     <script>
