--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <div id="success-message">
         <h2>Félicitations !</h2>
         <p>Le mariage aura lieu au Tir au Vol, à Arcachon ⚓️</p>
-        <a href="https://forms.gle/VOTRE_FORMULAIRE" target="_blank" class="btn-form">Continuer</a>
+        <a href="https://tally.so/r/Gxl9qj" class="btn-form">Continuer</a>
     </div>
 
     <script>
