--- a/index.html
+++ b/index.html
@@ -71,8 +71,22 @@
             background-color: #ffffff;
             border-radius: 8px;
             box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-            width: 320px;
-            height: 240px;
+            width: 240px;
+            height: 180px;
+        }
+
+        @media (min-width: 360px) {
+            #puzzle-container {
+                width: 300px;
+                height: 225px;
+            }
+        }
+
+        @media (min-width: 450px) {
+            #puzzle-container {
+                width: 320px;
+                height: 240px;
+            }
         }
 
         @media (min-width: 500px) {
@@ -538,15 +552,20 @@
                     });
                 }
 
+                let relX, relY;
+
                 if (zones.length === 0) {
-                    x = 10 + Math.random() * Math.max(0, winW - pw - 20);
-                    y = header + Math.random() * Math.max(0, winH - header - ph - 20);
+                    // Pas d'espace autour du puzzle - placer les pièces SUR le puzzle
+                    // en position empilée dans le coin inférieur droit
+                    const stackOffsetX = (i % 4) * 15;
+                    const stackOffsetY = Math.floor(i / 4) * 15;
+                    relX = rect.width - pw + stackOffsetX;
+                    relY = rect.height - ph + stackOffsetY;
                 } else {
                     zones[Math.floor(Math.random() * zones.length)]();
+                    relX = x - rect.left;
+                    relY = y - rect.top;
                 }
-
-                const relX = x - rect.left;
-                const relY = y - rect.top;
 
                 p.style.left = relX + 'px';
                 p.style.top = relY + 'px';
